[gd_scene load_steps=2 format=3 uid="uid://settings_screen_001"]

[ext_resource type="Script" path="res://scripts/ui/settings_screen.gd" id="1_script"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="SettingsPanel" type="Panel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0

[node name="AudioLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "AUDIO"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Master"

[node name="Slider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolume" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Music"

[node name="Slider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
value = 80.0

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "80%"
horizontal_alignment = 2

[node name="SFXVolume" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Sound FX"

[node name="Slider" type="HSlider" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="Value" type="Label" parent="CenterContainer/VBoxContainer/SettingsPanel/VBoxContainer/SFXVolume"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="TutorialSection" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TutorialLabel" type="Label" parent="CenterContainer/VBoxContainer/TutorialSection"]
layout_mode = 2
text = "TUTORIAL"
horizontal_alignment = 1

[node name="ResetTutorialButton" type="Button" parent="CenterContainer/VBoxContainer/TutorialSection"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Reset Tutorials"

[node name="DataSection" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DataLabel" type="Label" parent="CenterContainer/VBoxContainer/DataSection"]
layout_mode = 2
text = "SAVE DATA"
horizontal_alignment = 1

[node name="DeleteSaveButton" type="Button" parent="CenterContainer/VBoxContainer/DataSection"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Delete Save Data"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"
